# cherries

./: .gitignore  AGENTS.md  SESSION.md  cherry-processing-development-guide.md  cherry-processing-implementation-reference.md  classifier_experiment_summary_20260308.md
docs/: gdrive-shares  possible-improvements.md  resnet50-analysis.md  sandisk-drive.md  system-architecture.md  system-overview.md  training-data.md
docs/architecture/: INDEX.md
docs/core/: ARCHITECTURE.md  OPERATIONS.md  PRD.md  STANDARDS.md
docs/logs/: 2026-01-29-initialization.md  2026-01-30-documentation-update.md  2026-01-30-evaluation-results.md  2026-01-30-model-optimization.md  2026-01-30-training-infrastructure.md  2026-02-03-enso-migration-v0.2.0.md  2026-02-04-optimization-experiments.md  2026-02-05-handoff-meeting-prep.md  session-2025-02-05-threading-ws-migration.md  session-2026-02-06-phase1-complete.md  session-2026-02-06-phase1-research.md  session-2026-02-06-phase2-complete.md  session-2026-02-06-phase2-implementation.md  session-2026-02-06-training-methodology.md  session-2026-02-10-hardware-cleanup.md  session_2026-02-07_phase2_preparation.md  session_2026-02-11_maybe_discovery.md  session_2026-02-17_robust_training.md
docs/pytorch/: PYTORCH_02_MODELS.md  PYTORCH_04_PREPROCESSING.md  PYTORCH_07_TRAINING.md
docs/reference/: ENSO_V0.2.0_MIGRATION_PLAN.md  EXPERIMENT_ROADMAP.md  (+24 more)
system_architecture/: MAP.md
threading_ws/src/cameras/: CMakeLists.txt  package.xml
threading_ws/src/cameras/include/VimbaX_2023-4/api/lib/cmake/vmb/: vmb-config-version.cmake
threading_ws/src/cameras/include/VimbaX_2023-4/api/lib/cmake/vmb/configs/: vmb_imagetransform.cmake
threading_ws/src/cameras/include/VimbaX_2023-4/api/python/: vmbpy-1.0.4-py3-none-any.whl
threading_ws/src/cameras/include/VimbaX_2023-4/api/source/VmbCPP/: Frame.cpp
threading_ws/src/cameras/include/VimbaX_2023-4/cti/: VimbaGigETL.cti
threading_ws/src/cameras/include/VimbaX_2023-4/doc/VimbaX_Documentation/: .buildinfo  about.html  cAPIManual.html  cppAPIManual.html  driverInstaller.html  examplesOverview.html  fwUpdater.html  genindex.html  imagetransformManual.html  index.html  legalInformation.html  migrationGuide.html  objects.inv  pythonAPIManual.html  sdkManual.html  search.html  searchindex.js  settings.html  troubleshooting.html  viewerGuide.html
threading_ws/src/cameras/include/VimbaX_2023-4/doc/VimbaX_Documentation/.doctrees/: about.doctree  cAPIManual.doctree  cppAPIManual.doctree  environment.pickle  examplesOverview.doctree  imagetransformManual.doctree  index.doctree  pythonAPIManual.doctree  sdkManual.doctree  troubleshooting.doctree  viewerGuide.doctree
threading_ws/src/cameras/include/VimbaX_2023-4/doc/VimbaX_Documentation/_static/: documentation_options.js
threading_ws/src/cameras/include/VimbaX_2023-4/doc/VimbaX_ReleaseNotes/: .buildinfo  ARM.html  CSITL.html  GigETL.html  Linux.html  MacOS.html  USBTL.html  Windows.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
threading_ws/src/cameras/include/VimbaX_2023-4/doc/VimbaX_ReleaseNotes/.doctrees/: ARM.doctree  GigETL.doctree  Linux.doctree  MacOS.doctree  USBTL.doctree  Windows.doctree  environment.pickle  index.doctree
threading_ws/src/cameras/include/VimbaX_2023-4/doc/VmbCPP_Function_Reference/: .buildinfo  cppAPIReference.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
threading_ws/src/cameras/include/VimbaX_2023-4/doc/VmbCPP_Function_Reference/.doctrees/: cppAPIReference.doctree  environment.pickle
threading_ws/src/cameras/include/VimbaX_2023-4/doc/VmbC_Function_Reference/: .buildinfo  cAPIReference.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
threading_ws/src/cameras/include/VimbaX_2023-4/doc/VmbC_Function_Reference/.doctrees/: cAPIReference.doctree  environment.pickle
threading_ws/src/cameras/include/VimbaX_2023-4/doc/VmbPy_Function_Reference/: .buildinfo  Camera.html  Error.html  Feature.html  Frame.html  Interface.html  LocalDevice.html  Stream.html  TransportLayer.html  VmbSystem.html  genindex.html  index.html  objects.inv  search.html
threading_ws/src/cameras/include/VimbaX_2023-4/doc/VmbPy_Function_Reference/.doctrees/: environment.pickle
threading_ws/src/cameras/include/cameras/: AcquisitionHelper.h  EventObserver.h  cognex_cam.h  cognex_hdr.h  frameObserver.hpp
threading_ws/src/cameras/src/: AcquisitionHelper.cpp  EventObserver.cpp  FrameObserver.cpp  cognex_cam.cpp  cognex_hdr.cpp  main.cpp  mainhdr.cpp
threading_ws/src/cherry_interfaces/: CMakeLists.txt  package.xml
threading_ws/src/cherry_interfaces/action/: Acquisition.action  Acquisitionhdr.action  Detection.action  FindCherries.action
threading_ws/src/cherry_interfaces/msg/: Cherry.msg  CherryArray.msg  CherryArrayStamped.msg  EncoderCount.msg  HSC.msg  ImageLayer.msg  ImageSet.msg  ImageSetHdr.msg  Inputs.msg  Outputs.msg  Temperature.msg  Trigger.msg
threading_ws/src/cherry_interfaces/srv/: CombineImages.srv  Detection.srv  Detectionhdr.srv  EncoderCount.srv  EncoderLatches.srv  GetCherryBuffer.srv  ImageCounts.srv  ImageSave.srv  LatchRobot.srv  ResetLatches.srv  SetLatch.srv  SetLights.srv  Trigger.srv
threading_ws/src/composite/: CMakeLists.txt  package.xml
threading_ws/src/composite/include/composite/: main_node.h  record_hdr.h
threading_ws/src/composite/src/: main_node.cpp  main_node_old.cpp  record_hdr.cpp
threading_ws/src/plc_eip/: CMakeLists.txt  package.xml
threading_ws/src/plc_eip/include/plc_eip/: cipster_user_conf.h  eip_comms.h
threading_ws/src/plc_eip/src/: plc_eip.cpp
threading_ws/src/tracking_projector/: CMakeLists.txt  package.xml
threading_ws/src/tracking_projector/include/tracking_projector/: cherry_cpp.hpp  conveyor.h  frame.h  frame_drawer.h  helper.h  history.h  tracker.h  tracker_node.h
threading_ws/src/tracking_projector/src/: cherry_cpp.cpp  cognex_hdr.cpp  conveyor.cpp  frame.cpp  frame_drawer.cpp  helper.cpp  history.cpp  main.cpp  tracker.cpp  tracker.ui  tracker_node.cpp
training/: README.md  SMOKE_TEST_RESULTS.md  test_structure.py
(+394 files in other folders)
