<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tracking_projector</name>
  <version>1.4.2</version>
    <description>
        Tracks items on a conveyor belt using a projector
    </description>
  <maintainer email="whavener@sabereng.com">Wesley Havener</maintainer>
 <license>Apache License 2.0</license>
 
 <buildtool_depend>ament_cmake</buildtool_depend>

 <build_depend>rclcpp</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>qtbase6-dev</build_depend>
 <build_depend>qt6-qmake</build_depend>
 
 <exec_depend>libqt6-core</exec_depend>
 <exec_depend>rclcpp</exec_depend>
 <exec_depend>std_msgs</exec_depend><export>

 <build_type>ament_cmake</build_type>

 </export>
</package>